syntax = "proto3";
package user;
option go_package = "userpb";

service UserService {
    rpc CreateUser(CreateUserReq) returns (CreateUserRes);
    rpc ReadUser(ReadUserReq) returns (ReadUserRes);
    rpc UpdateUser(UpdateUserReq) returns (UpdateUserRes);
    rpc DeleteUser(DeleteUserReq) returns (DeleteUserRes);
    rpc ListUsers(ListUserRequest) returns (stream  ListUserResponse);

}

message User {
    string id = 1;
    string name = 2;
    string dob = 3;
}

message CreateUserReq {
    User User = 1; // User id blank
}

message CreateUserRes {
    User User = 1; // User id filled in
}

message UpdateUserReq {
    User User = 1;
}

message UpdateUserRes {
    User User = 1;
}

message ReadUserReq {
    string id = 1;
}

message ReadUserRes {
    User User = 1;
}

message DeleteUserReq {
    string id = 1;
}

message DeleteUserRes {
    bool success = 1;
}

message ListUserRequest {}

message ListUserResponse {
    User User = 1;
}